Add `/scripts/py_matter_idl/build/` & `/scripts/py_matter_yamltests/build/` to .gitignore
These folders were filling with generated build files after compiling and running the unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ out/
 /src/test_driver/nrfconnect/build/
 /src/darwin/Framework/build/
 /src/python_testing/matter_testing_infrastructure/build/
+/scripts/py_matter_idl/build/
+/scripts/py_matter_yamltests/build/
 
 # Pigweed Environment
 .environment*/
